@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.145 2007-07-01 18:44:36 karl Exp $
+$Id: NEWS,v 1.146 2007-07-08 13:11:48 karl Exp $
 This NEWS file records noteworthy changes, very tersely.
 See the manual for detailed information.
 
@@ -8,7 +8,6 @@ See the manual for detailed information.
   Copying and distribution of this file, with or without modification,
   are permitted in any medium without royalty provided the copyright
   notice and this notice are preserved.
-
 
 *** IMPORTANT NEWS FOR ALL AUTHORS OF TEXINFO MANUALS ***
 
@@ -47,6 +46,7 @@ one of the relevant sections:
   . @allow-recursion (never documented) is deprecated and produces a warning.
   . @quote-args (never documented) is now the default behavior.
   . centering and such take account of character widths.
+  . the --reference-limit option is now a no-op.
   . improvements to XML and Docbook output and the DTD.
 * texi2dvi:
   . pdftexi2dvi is a new wrapper to `texi2dvi --pdf', equal to texi2pdf,
